--- a/03_tickers.ipynb
+++ b/03_tickers.ipynb
@@ -10,18 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Nathan\\miniconda3\\envs\\algotrading\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
-      "  from pandas.core import (\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "###\n",
     "from polygon.rest import RESTClient\n",
@@ -2612,7 +2603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2674,15 +2665,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "[]\n"
+      "238\n",
+      "[['ABTLE', {133, 134}], ['ACMTA', {225, 226, 227}], ['ACSEF', {249, 250, 251, 252}]]\n"
      ]
     }
    ],
@@ -2721,7 +2712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2989,7 +2980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2998,7 +2989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3028,14 +3019,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4531\n"
+      "5101\n"
      ]
     },
     {
@@ -3071,6 +3062,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>AACOU</td>\n",
+       "      <td>AUSTRALIA ACQUISITION CORP   UNIT SH &amp; WT EXP</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2010-11-12</td>\n",
+       "      <td>2010-12-10</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>1499593.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>AACOU</td>\n",
+       "      <td>AUSTRALIA ACQUISITION CORP   UNIT SH &amp; WT EXP</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2010-12-15</td>\n",
+       "      <td>2012-10-15</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>1499593.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>42</th>\n",
        "      <td>AAIT</td>\n",
        "      <td>ISHARES MSCI ALL COUNTRY ASIA INFO TECHNOLOGY ETF</td>\n",
@@ -3079,29 +3092,7 @@
        "      <td>2015-08-21</td>\n",
        "      <td>NONE</td>\n",
        "      <td>1100663.0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>AAVX</td>\n",
-       "      <td>UBS AG LONDON BRH ETRACS LINKED FRONT MNTH ETN...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2011-09-08</td>\n",
-       "      <td>2011-09-08</td>\n",
-       "      <td>NONE</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72</th>\n",
-       "      <td>AAY</td>\n",
-       "      <td>MORGAN STLY **% HITS LKD ALLEGHENY TECH COM 4/...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2007-03-26</td>\n",
-       "      <td>2008-04-21</td>\n",
-       "      <td>NONE</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3109,17 +3100,17 @@
       ],
       "text/plain": [
        "   ticker                                               name  active  \\\n",
+       "25  AACOU      AUSTRALIA ACQUISITION CORP   UNIT SH & WT EXP   False   \n",
+       "26  AACOU      AUSTRALIA ACQUISITION CORP   UNIT SH & WT EXP   False   \n",
        "42   AAIT  ISHARES MSCI ALL COUNTRY ASIA INFO TECHNOLOGY ETF   False   \n",
-       "69   AAVX  UBS AG LONDON BRH ETRACS LINKED FRONT MNTH ETN...   False   \n",
-       "72    AAY  MORGAN STLY **% HITS LKD ALLEGHENY TECH COM 4/...   False   \n",
        "\n",
        "    start_date    end_date  type        cik composite_figi  \n",
-       "42  2012-02-09  2015-08-21  NONE  1100663.0                 \n",
-       "69  2011-09-08  2011-09-08  NONE                            \n",
-       "72  2007-03-26  2008-04-21  NONE                            "
+       "25  2010-11-12  2010-12-10  NONE  1499593.0            NaN  \n",
+       "26  2010-12-15  2012-10-15  NONE  1499593.0            NaN  \n",
+       "42  2012-02-09  2015-08-21  NONE  1100663.0            NaN  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3176,11 +3167,11 @@
     "        or \"citigp\" in s.lower().split() \\\n",
     "        or \"citicgroup\" in s.lower().split() \\\n",
     "        or \"mrgn\" in s.lower().split() \\\n",
-    "        or \"lnk\" in s.lower().split() \\    \n",
+    "        or \"lnk\" in s.lower().split() \\\n",
     "        or \"pines\" in s.lower().split() \\\n",
     "        or \"cert\" in s.lower().split() \\\n",
     "        or \"certificate\" in s.lower().split() \\\n",
-    "        or \"lkd\" in s.lower().split() \\  \n",
+    "        or \"lkd\" in s.lower().split() \\\n",
     "        or \"lknd\" in s.lower().split() \\\n",
     "        or \"velocityshs\" in s.lower().split() \\\n",
     "        or \"structred\" in s.lower().split() \\\n",
@@ -3188,7 +3179,7 @@
     "        or \"nt\" in s.lower().split()\\\n",
     "        or \"unit\" in s.lower().split()\\\n",
     "        or \"units\" in s.lower().split()\\\n",
-    "        or \"\\\"quids\\\"\" in s.lower().split() \\       \n",
+    "        or \"\\\"quids\\\"\" in s.lower().split() \\\n",
     "        or (\"pioneer\" in s.lower().split() and \"trust\" in s.lower().split()) \\\n",
     "        )\n",
     "\n",
@@ -3203,7 +3194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3253,8 +3244,8 @@
        "      <td>2004-01-30</td>\n",
        "      <td>2004-03-05</td>\n",
        "      <td>NONE</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
@@ -3264,8 +3255,8 @@
        "      <td>2003-09-10</td>\n",
        "      <td>2004-01-29</td>\n",
        "      <td>NONE</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>41</th>\n",
@@ -3276,7 +3267,7 @@
        "      <td>2022-08-19</td>\n",
        "      <td>NONE</td>\n",
        "      <td>1209028.0</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3289,12 +3280,12 @@
        "41      AAIN  Arlington Asset Investment Corp. 6.000% Senior...   False   \n",
        "\n",
        "    start_date    end_date  type        cik composite_figi  \n",
-       "31  2004-01-30  2004-03-05  NONE                            \n",
-       "33  2003-09-10  2004-01-29  NONE                            \n",
-       "41  2021-07-19  2022-08-19  NONE  1209028.0                 "
+       "31  2004-01-30  2004-03-05  NONE        NaN            NaN  \n",
+       "33  2003-09-10  2004-01-29  NONE        NaN            NaN  \n",
+       "41  2021-07-19  2022-08-19  NONE  1209028.0            NaN  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3308,7 +3299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3358,8 +3349,8 @@
        "      <td>2003-09-10</td>\n",
        "      <td>2004-01-29</td>\n",
        "      <td>NONE</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50</th>\n",
@@ -3394,12 +3385,12 @@
        "56   AAPw     ADVANCE AUTO PARTS INC WI   False  2005-09-22  2005-09-23  NONE   \n",
        "\n",
        "          cik composite_figi  \n",
-       "33                            \n",
+       "33        NaN            NaN  \n",
        "50  1821393.0   BBG00WCNDCZ6  \n",
        "56  1158449.0   BBG000F7RCJ1  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3413,7 +3404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3463,8 +3454,8 @@
        "      <td>2006-08-08</td>\n",
        "      <td>2008-02-08</td>\n",
        "      <td>NONE</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
@@ -3475,7 +3466,7 @@
        "      <td>2010-12-10</td>\n",
        "      <td>NONE</td>\n",
        "      <td>1499593.0</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
@@ -3486,7 +3477,7 @@
        "      <td>2012-10-15</td>\n",
        "      <td>NONE</td>\n",
        "      <td>1499593.0</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3499,12 +3490,12 @@
        "26   AACOU      AUSTRALIA ACQUISITION CORP   UNIT SH & WT EXP   False   \n",
        "\n",
        "    start_date    end_date  type        cik composite_figi  \n",
-       "13  2006-08-08  2008-02-08  NONE                            \n",
-       "25  2010-11-12  2010-12-10  NONE  1499593.0                 \n",
-       "26  2010-12-15  2012-10-15  NONE  1499593.0                 "
+       "13  2006-08-08  2008-02-08  NONE        NaN            NaN  \n",
+       "25  2010-11-12  2010-12-10  NONE  1499593.0            NaN  \n",
+       "26  2010-12-15  2012-10-15  NONE  1499593.0            NaN  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3531,7 +3522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3581,8 +3572,8 @@
        "      <td>2006-08-08</td>\n",
        "      <td>2008-02-08</td>\n",
        "      <td>NONE</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>94</th>\n",
@@ -3617,12 +3608,12 @@
        "110    ABDw                       ACCO BRANDS CORPORATION W.I.   False   \n",
        "\n",
        "     start_date    end_date  type        cik composite_figi  \n",
-       "13   2006-08-08  2008-02-08  NONE                            \n",
+       "13   2006-08-08  2008-02-08  NONE        NaN            NaN  \n",
        "94   2012-12-10  2012-12-31    CS  1551152.0   BBG0025Y4RY4  \n",
        "110  2005-08-09  2005-08-16    CS   712034.0   BBG000J06K07  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3642,7 +3633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3692,8 +3683,8 @@
        "      <td>2006-08-08</td>\n",
        "      <td>2008-02-08</td>\n",
        "      <td>NONE</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
@@ -3703,8 +3694,8 @@
        "      <td>2004-01-30</td>\n",
        "      <td>2004-03-05</td>\n",
        "      <td>NONE</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
@@ -3715,7 +3706,7 @@
        "      <td>2014-04-08</td>\n",
        "      <td>NONE</td>\n",
        "      <td>6201.0</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3728,12 +3719,12 @@
        "44    AALC.P    AMERICAN AIRLINES GROUP INC SER A CONV PREF STK   False   \n",
        "\n",
        "    start_date    end_date  type     cik composite_figi  \n",
-       "13  2006-08-08  2008-02-08  NONE                         \n",
-       "31  2004-01-30  2004-03-05  NONE                         \n",
-       "44  2013-12-09  2014-04-08  NONE  6201.0                 "
+       "13  2006-08-08  2008-02-08  NONE     NaN            NaN  \n",
+       "31  2004-01-30  2004-03-05  NONE     NaN            NaN  \n",
+       "44  2013-12-09  2014-04-08  NONE  6201.0            NaN  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3762,7 +3753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3813,7 +3804,7 @@
        "      <td>2010-12-10</td>\n",
        "      <td>NONE</td>\n",
        "      <td>1499593.0</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
@@ -3824,7 +3815,7 @@
        "      <td>2012-10-15</td>\n",
        "      <td>NONE</td>\n",
        "      <td>1499593.0</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -3835,7 +3826,7 @@
        "      <td>2012-10-15</td>\n",
        "      <td>NONE</td>\n",
        "      <td>1499593.0</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3848,12 +3839,12 @@
        "27  AACOW             AUSTRALIA ACQUISITION CORP WARRANT   False  2010-12-14   \n",
        "\n",
        "      end_date  type        cik composite_figi  \n",
-       "25  2010-12-10  NONE  1499593.0                 \n",
-       "26  2012-10-15  NONE  1499593.0                 \n",
-       "27  2012-10-15  NONE  1499593.0                 "
+       "25  2010-12-10  NONE  1499593.0            NaN  \n",
+       "26  2012-10-15  NONE  1499593.0            NaN  \n",
+       "27  2012-10-15  NONE  1499593.0            NaN  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3871,7 +3862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3888,7 +3879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3896,7 +3887,7 @@
      "output_type": "stream",
      "text": [
       "28896\n",
-      "19384\n"
+      "19188\n"
      ]
     }
    ],
@@ -3916,7 +3907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3949,7 +3940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3959,7 +3950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3978,7 +3969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4026,16 +4017,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18086"
+       "17929"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4050,7 +4041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4060,15 +4051,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total tickers: 18086\n",
-      "Unique tickers: 15676\n"
+      "Total tickers: 17929\n",
+      "Unique tickers: 15552\n"
      ]
     }
    ],
