--- a/04_ETPs.ipynb
+++ b/04_ETPs.ipynb
@@ -28,18 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Nathan\\miniconda3\\envs\\algotrading\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
-      "  from pandas.core import (\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#####\n",
     "from polygon.rest import RESTClient\n",
@@ -48,6 +39,8 @@
     "from times import first_trading_date_after_equal, last_trading_date_before_equal\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
     "POLYGON_DATA_PATH = \"../data/polygon/\"\n",
     "START_DATE = first_trading_date_after_equal(date(2003, 9, 10))\n",
@@ -68,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +170,7 @@
        "2       NaN  ETF  0000930667   BBG000BDNJ29  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,27 +204,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Nathan\\AppData\\Local\\Temp\\ipykernel_13652\\2208733527.py:4: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '2017-11-30' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  tickers_ETP.iloc[index, tickers_ETP.columns.get_loc(\"start_date\")] = max(date.fromisoformat(client.get_ticker_events(row[\"ticker\"]).events[-1]['date']), START_DATE)\n",
-      "C:\\Users\\Nathan\\AppData\\Local\\Temp\\ipykernel_13652\\2208733527.py:11: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  tickers_ETP[\"end_date\"].fillna(END_DATE, inplace=True)\n",
-      "C:\\Users\\Nathan\\AppData\\Local\\Temp\\ipykernel_13652\\2208733527.py:11: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '2024-04-19' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  tickers_ETP[\"end_date\"].fillna(END_DATE, inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for index, row in tickers_ETP.copy().iterrows():\n",
     "    if row[\"type\"] == \"ETF\" or row[\"type\"] == \"ETN\" or row[\"type\"] == \"ETV\":\n",
@@ -256,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +294,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>18134</th>\n",
+       "      <th>17977</th>\n",
        "      <td>XLY-2003-09-10</td>\n",
        "      <td>XLY</td>\n",
        "      <td>Consumer Discretionary Select Sector SPDR Fund</td>\n",
@@ -331,7 +306,7 @@
        "      <td>BBG000BJ1MF9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18135</th>\n",
+       "      <th>17978</th>\n",
        "      <td>GLD-2008-05-22</td>\n",
        "      <td>GLD</td>\n",
        "      <td>SPDR Gold Trust, SPDR Gold Shares</td>\n",
@@ -343,7 +318,7 @@
        "      <td>BBG000CRF6Q8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18136</th>\n",
+       "      <th>17979</th>\n",
        "      <td>SLV-2006-04-28</td>\n",
        "      <td>SLV</td>\n",
        "      <td>iShares Silver Trust</td>\n",
@@ -360,17 +335,17 @@
       ],
       "text/plain": [
        "                   ID ticker                                            name  \\\n",
-       "18134  XLY-2003-09-10    XLY  Consumer Discretionary Select Sector SPDR Fund   \n",
-       "18135  GLD-2008-05-22    GLD               SPDR Gold Trust, SPDR Gold Shares   \n",
-       "18136  SLV-2006-04-28    SLV                            iShares Silver Trust   \n",
+       "17977  XLY-2003-09-10    XLY  Consumer Discretionary Select Sector SPDR Fund   \n",
+       "17978  GLD-2008-05-22    GLD               SPDR Gold Trust, SPDR Gold Shares   \n",
+       "17979  SLV-2006-04-28    SLV                            iShares Silver Trust   \n",
        "\n",
        "       active  start_date    end_date type         cik composite_figi  \n",
-       "18134    True  2003-09-10  2024-04-19  ETF  0001064641   BBG000BJ1MF9  \n",
-       "18135    True  2008-05-22  2024-04-19  ETF  0001222333   BBG000CRF6Q8  \n",
-       "18136    True  2006-04-28  2024-04-19  ETF  0001330568   BBG000NDCRW7  "
+       "17977    True  2003-09-10  2024-04-19  ETF  0001064641   BBG000BJ1MF9  \n",
+       "17978    True  2008-05-22  2024-04-19  ETF  0001222333   BBG000CRF6Q8  \n",
+       "17979    True  2006-04-28  2024-04-19  ETF  0001330568   BBG000NDCRW7  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
