--- a/07_process.ipynb
+++ b/07_process.ipynb
@@ -17,18 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Nathan\\miniconda3\\envs\\algotrading\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
-      "  from pandas.core import (\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tickers import get_tickers\n",
     "from times import get_market_calendar\n",
@@ -38,17 +29,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "DATA_PATH = \"../data/polygon/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import warnings\n",
-    "warnings.simplefilter(action='ignore', category=FutureWarning)"
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "DATA_PATH = \"../data/polygon/\""
    ]
   },
   {
@@ -1384,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1509,7 +1492,7 @@
        "2  2024-04-19  2003-09-10  2024-04-19   CS  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1530,14 +1513,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "283\n"
+      "282\n"
      ]
     },
     {
@@ -1630,7 +1613,7 @@
        "113  2005-07-22        NaT      NaT    CS  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1643,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
