--- a/14_index_holdings.ipynb
+++ b/14_index_holdings.ipynb
@@ -5,13 +5,14 @@
    "metadata": {},
    "source": [
     "# Index constituents\n",
-    "Sometimes (especially for long strategies), I want to limit my focus to the largest X stocks. The high-market-cap stocks are less likely to be manipulated, more liquid and actually profitable companies. However I don't care what is exactly in the S&P500. I just want to be reasonably close to it. So I also don't need a day-by-day update. Quarterly is fine.\n",
+    "Sometimes (especially for long strategies), I want to limit my focus to the largest X stocks. The high-market-cap stocks are less likely to be manipulated, more liquid and actually profitable companies. However I don't care what is exactly in the S&P500. I care only about marketcap and liquidity. So I also don't need a day-by-day update. Quarterly is fine.\n",
     "\n",
     "The goal is to create a list of stocks of the largest N market caps. However we will apply more rules:\n",
     "\n",
-    "* (Must have market cap data)\n",
+    "* Must have market cap\n",
     "* Must have a SIC code\n",
-    "* Must be common stocks and not ADRs"
+    "* Must be headquartered in the US\n",
+    "* Must have original price above $1"
    ]
   },
   {
@@ -127,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Current S&P500 vs Top 500\n",
+    "# Current S&P500 vs Top 500\n",
     "What is the difference between the real S&P500 and the list we created? To get the current S&P500 holdings, I use this [link](https://www.slickcharts.com/sp500) from slickcharts. We need to to cautious with ticker conventions. Polygon uses a . with some share classes, such as BRK.B. Others have no points."
    ]
   },
@@ -363,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Current Russell 3000 vs Top 3000\n",
+    "# Current Russell 3000 vs Top 3000\n",
     "The Russell 3000 is essentially all stocks except the microcaps. I could not find the real holdings of the Russell 3000 so I will use the Russell 3000 ETF (IWV), which only has around 2750 holdings instead of 3000. Nevertheless, the 250 won't make a difference.\n",
     "\n",
     "First, not all tickers that we have are in IWV:"
@@ -654,10 +655,15 @@
    "source": [
     "This is better than expected. I don't have ticker changes for 2024, so a part that could have explained the differences is that I failed to query on the old ticker.\n",
     "\n",
-    "### Conclusion\n",
+    "# Conclusion\n",
     "\n",
     "All in all, I am content with the indices that I have created because they resemble the original indices enough for it to be usable."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
