--- a/13_fundamentals.ipynb
+++ b/13_fundamentals.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Fundamentals\n",
+    "Recycled tickers: data not available.\n",
+    "\n",
     "I don't really care what the exact point-in-time fundamental data is. Because that would imply updating my data at every earnings release. And my main use for fundamentals data is filtering/segmentation analysis. E.g. filter non profitable/non-profitable companies for a specific mean-reversion strategy. Or get the 3000 largest stocks by market cap. I am not interested in pure fundamental strategies, as the holding period will be months to years. And then 2003-2024 is simply not enough data.\n",
     "\n",
     "I will simply sample every quarter (after earnings releases) and then use that. Instead of having 1 file per ticker, we only need one fundamentals.csv file that contains everything. We can do this because the data is only updated quarterly so this file is small.\n",
@@ -14,14 +16,13 @@
     "* Column 2: current ticker (however we might need to query the old ticker, which we luckily have the information for in tickers v5)\n",
     "* Other columns:\n",
     "    * Market-cap\n",
-    "    * SIC code\n",
     "\n",
     "Using market-cap, I can create historical constituents for S&P100, S&P500, S&P1500, Russell 3000 and Russell 3000E index."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,20 +38,13 @@
     "\n",
     "DATA_PATH = \"../data/polygon/\"\n",
     "\n",
-    "START_DATE = date(2019, 8, 1) # MUST BE 1st of FEB, MAY, AUG or NOV\n",
+    "START_DATE = date(2003, 11, 1) # MUST BE 1st of FEB, MAY, AUG or NOV\n",
     "END_DATE = date(2024, 3, 1)\n",
     "\n",
     "with open(DATA_PATH + \"secret.txt\") as f:\n",
     "    KEY = next(f).strip()\n",
     "\n",
     "client = RESTClient(api_key=KEY)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TO CHANGE: at the date of a ticker change, also get the SIC and marketcap."
    ]
   },
   {
@@ -64,7 +58,9 @@
     "for index, row in tickers.iterrows():\n",
     "    id = row['ID']\n",
     "    ticker = id[:-11]\n",
-    "    asset_type = row['type']\n",
+    "\n",
+    "    country = row['country']\n",
+    "    sic = row['sic']\n",
     "    start_data = row['start_data']\n",
     "    end_data = row['end_data']\n",
     "\n",
@@ -74,57 +70,54 @@
     "        if day < start_data or day > end_data:\n",
     "            continue\n",
     "\n",
-    "        old_ticker = ticker\n",
+    "        ticker_on_day = ticker\n",
     "        ticker_changes_str = tickers[tickers['ID'] == id]['tickers_old'].values[0]\n",
     "        ticker_changes = ast.literal_eval(ticker_changes_str)\n",
     "\n",
     "        # To get the point-in-time ticker, we need to search for the first ticker change after that date.\n",
-    "        # (The ticker_changes always go from new to old. We reverse to go from old to new.)\n",
-    "        ticker_changes = list(reversed(ticker_changes)) # Old to new now, e.g. [['2021-03-26', 'NTN'], ['2022-10-17', 'BTX']]\n",
+    "        # E.g. {'2022-10-17': 'BTX', '2021-03-26': 'NTN'} on 2021-03-26 is BTX, as on 2021-03-26 the ticker changed from NTN\n",
+    "        if ticker_changes:\n",
+    "            changes_after_day = dict(filter(lambda k: date.fromisoformat(k[0]) > day, ticker_changes.items()))\n",
+    "            if changes_after_day:\n",
+    "                ticker_on_day = ticker_changes[next(reversed(changes_after_day.keys()))]\n",
     "\n",
-    "        if len(ticker_changes) > 0:\n",
-    "            for index, ticker_change in enumerate(ticker_changes):\n",
-    "                ticker_change_date = ticker_change[0]\n",
-    "                if day < date.fromisoformat(ticker_change_date):\n",
-    "                    old_ticker = ticker_changes[index][1]\n",
-    "                    break\n",
     "        try:\n",
-    "            ticker_details = client.get_ticker_details(ticker=old_ticker, date=day)\n",
+    "            ticker_details = client.get_ticker_details(ticker=ticker_on_day, date=day)\n",
     "        except Exception:\n",
     "            continue\n",
     "\n",
     "        try:\n",
     "            market_cap = ticker_details.market_cap\n",
     "        except AttributeError:\n",
-    "            pass\n",
-    "\n",
-    "        try:\n",
-    "            sic_code = ticker_details.sic_code\n",
-    "        except AttributeError:\n",
-    "            pass\n",
-    "        \n",
-    "        if not market_cap and not sic_code:\n",
     "            continue\n",
     "        \n",
     "        if not market_cap:\n",
-    "            market_cap = np.nan\n",
-    "        else:\n",
-    "            market_cap_M =  int(market_cap/1_000_000)\n",
-    "            \n",
-    "        if not sic_code:\n",
-    "            sic_code = np.nan\n",
+    "            continue\n",
     "        \n",
+    "        market_cap_M =  int(market_cap/1_000_000)\n",
+    "            \n",
     "        # Add data to our list\n",
     "        rows.append({'date': day,\n",
     "                     'ID': id,\n",
     "                     'market_cap_M': market_cap_M,\n",
-    "                     'sic_code': sic_code,\n",
-    "                     'type': asset_type})\n",
+    "                     'country': country,\n",
+    "                     'sic': sic})\n",
     "    \n",
-    "    market_cap_df = pd.DataFrame(rows)\n",
-    "    market_cap_df = market_cap_df.groupby('ID').agg({'market_cap_M': 'last'})\n",
-    "    print(f'{index+1} | {len(market_cap_df)}')\n",
+    "    # market_cap_df = pd.DataFrame(rows)\n",
+    "    # market_cap_df = market_cap_df.groupby('ID').agg({'market_cap_M': 'last'})\n",
+    "    # print(f'{index+1} | {len(market_cap_df)}')\n",
+    "    print(f'{index}')\n",
     "\n",
+    "market_cap_df = pd.DataFrame(rows)\n",
+    "market_cap_df.to_csv(DATA_PATH + 'processed/fundamentals.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "market_cap_df = pd.DataFrame(rows)\n",
     "market_cap_df.to_csv(DATA_PATH + 'processed/fundamentals.csv')"
    ]
@@ -139,33 +132,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "tickers = get_tickers(types=['CS', 'ADRC'])\n",
-    "tickers = tickers[tickers['end_data'] - tickers['start_data'] > timedelta(days=60)] "
+    "# tickers = tickers[tickers['end_data'] - tickers['start_data'] > timedelta(days=60)] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Amount of tickers: 7495\n",
-      "Amount of stocks with marketcap: 7337\n",
-      "Amount of stocks with SIC code: 6189\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fundamentals = pd.read_csv(DATA_PATH + 'processed/fundamentals.csv', index_col=0)\n",
     "grouped_by_marketcap = fundamentals.groupby('ID').agg({'market_cap_M': 'last'}).dropna()\n",
-    "grouped_by_sic = fundamentals.groupby('ID').agg({'sic_code': 'last'}).dropna()\n",
+    "grouped_by_sic = fundamentals.groupby('ID').agg({'sic': 'last'}).dropna()\n",
     "\n",
     "print(f'Amount of tickers: {len(tickers)}')\n",
     "print(f\"Amount of stocks with marketcap: {len(grouped_by_marketcap)}\")\n",
@@ -174,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,13 +203,13 @@
    "metadata": {},
    "source": [
     "### Updates\n",
-    "1. There is no need to process ticker changes because fundamentals is point-in-time. If we get fundamental data for a ticker that had a ticker change, the code automatically searchs for the old ticker.\n",
-    "2. Same procedure to update"
+    "<!-- 1. There is no need to process ticker changes because fundamentals is point-in-time. If we get fundamental data for a ticker that had a ticker change, the code automatically searchs for the old ticker.\n",
+    "2. Same procedure to update -->"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
